--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
-    <string name="app_name">AITranslator</string>
+    <string name="app_name" translatable="false">AITranslator</string>
+
+    <string name="language_chinese">Китайский</string>
+    <string name="language_spanish">Испанский</string>
+    <string name="language_french">Французский</string>
+    <string name="language_german">Немецкий</string>
+    <string name="language_russian">Русский</string>
+    <string name="language_japanese">Японский</string>
+    <string name="language_portuguese">Португальский</string>
+    <string name="language_italian">Итальянский</string>
+    <string name="language_korean">Корейский</string>
+    <string name="language_english">Английский</string>
 </resources>
