--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -10,4 +10,7 @@
     <string name="language_italian">Italian</string>
     <string name="language_korean">Korean</string>
     <string name="language_english">English</string>
+
+    <string name="translate_from">Translate from</string>
+    <string name="translate_to">Translate to</string>
 </resources>
