--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="language_italian">Итальянский</string>
     <string name="language_korean">Корейский</string>
     <string name="language_english">Английский</string>
+    
+    <string name="translate_from">Перевести с</string>
+    <string name="translate_to">Перевести на</string>
 </resources>
