--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -13,4 +13,5 @@
 
     <string name="translate_from">Übersetzen von</string>
     <string name="translate_to">Übersetzen in</string>
+    <string name="search">Suchen</string>
 </resources>
