--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -13,4 +13,5 @@
 
     <string name="translate_from">Translate from</string>
     <string name="translate_to">Translate to</string>
+    <string name="search">Search</string>
 </resources>
