--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -13,4 +13,5 @@
 
     <string name="translate_from">Traducir de</string>
     <string name="translate_to">Traducir a</string>
+    <string name="search">Buscar</string>
 </resources>
