--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -13,4 +13,5 @@
 
     <string name="translate_from">Tradurre da</string>
     <string name="translate_to">Tradurre in</string>
+    <string name="search">Ricerca</string>
 </resources>
