--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -13,4 +13,5 @@
 
     <string name="translate_from">から翻訳する</string>
     <string name="translate_to">へ翻訳する</string>
+    <string name="search">検索</string>
 </resources>
