--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -13,4 +13,5 @@
 
     <string name="translate_from">에서 번역</string>
     <string name="translate_to">로 번역</string>
+    <string name="search">검색</string>
 </resources>
