--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -13,4 +13,5 @@
 
     <string name="translate_from">Traduzir de</string>
     <string name="translate_to">Traduzir para</string>
+    <string name="search">Pesquisar</string>
 </resources>
