--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -13,4 +13,5 @@
 
     <string name="translate_from">Перевести с</string>
     <string name="translate_to">Перевести на</string>
+    <string name="search">Поиск</string>
 </resources>
