--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -14,4 +14,5 @@
     <string name="translate_from">Übersetzen von</string>
     <string name="translate_to">Übersetzen in</string>
     <string name="search">Suchen</string>
+    <string name="enter_text">Geben Sie Text ein</string>
 </resources>
