--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -14,4 +14,5 @@
     <string name="translate_from">Translate from</string>
     <string name="translate_to">Translate to</string>
     <string name="search">Search</string>
+    <string name="enter_text">Enter text</string>
 </resources>
