--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -14,4 +14,5 @@
     <string name="translate_from">から翻訳する</string>
     <string name="translate_to">へ翻訳する</string>
     <string name="search">検索</string>
+    <string name="enter_text">テキストを入力してください</string>
 </resources>
