--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -14,4 +14,5 @@
     <string name="translate_from">에서 번역</string>
     <string name="translate_to">로 번역</string>
     <string name="search">검색</string>
+    <string name="enter_text">텍스트를 입력하세요</string>
 </resources>
