--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -14,4 +14,5 @@
     <string name="translate_from">Traduzir de</string>
     <string name="translate_to">Traduzir para</string>
     <string name="search">Pesquisar</string>
+    <string name="enter_text">Digite o texto</string>
 </resources>
