--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,9 @@
     <string name="language_italian">Итальянский</string>
     <string name="language_korean">Корейский</string>
     <string name="language_english">Английский</string>
-    
+
     <string name="translate_from">Перевести с</string>
     <string name="translate_to">Перевести на</string>
     <string name="search">Поиск</string>
+    <string name="enter_text">Введите текст</string>
 </resources>
