Translation of InternetNoConnection

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -15,4 +15,7 @@
     <string name="translate_to">Translate to</string>
     <string name="search">Search</string>
     <string name="enter_text">Enter text</string>
+    <string name="no_connection">No connection</string>
+    <string name="no_connection_text">Check the network connection and refresh the page</string>
+    <string name="refresh_button">Refresh</string>
 </resources>
