--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -15,4 +15,7 @@
     <string name="translate_to">로 번역</string>
     <string name="search">검색</string>
     <string name="enter_text">텍스트를 입력하세요</string>
+    <string name="no_connection">연결 없음</string>
+    <string name="no_connection_text">네트워크 연결을 확인하고 페이지를 새로 고칩니다</string>
+    <string name="refresh_button">업데이트</string>
 </resources>
