--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -15,4 +15,7 @@
     <string name="translate_to">Übersetzen in</string>
     <string name="search">Suchen</string>
     <string name="enter_text">Geben Sie Text ein</string>
+    <string name="no_connection">Keine Verbindung</string>
+    <string name="no_connection_text">Überprüfen Sie die Netzwerkverbindung und aktualisieren Sie die Seite</string>
+    <string name="refresh_button">Aktualisieren</string>
 </resources>
