--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -15,4 +15,7 @@
     <string name="translate_to">Перевести на</string>
     <string name="search">Поиск</string>
     <string name="enter_text">Введите текст</string>
+    <string name="no_connection">Нет соединения</string>
+    <string name="no_connection_text">Проверьте соединение с сетью и обновите страницу</string>
+    <string name="refresh_button">Обновить</string>
 </resources>
