--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -18,4 +18,9 @@
     <string name="no_connection">No connection</string>
     <string name="no_connection_text">Check the network connection and refresh the page</string>
     <string name="refresh_button">Refresh</string>
+    <string name="theme_design">Theme design</string>
+    <string name="light">Light</string>
+    <string name="dark">Dark</string>
+    <string name="system">System</string>
+    <string name="same_device_text">The same as on the device</string>
 </resources>
