--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -18,4 +18,9 @@
     <string name="no_connection">接続がありません</string>
     <string name="no_connection_text">ネットワーク接続を確認して、ページを更新してください</string>
     <string name="refresh_button">更新する</string>
+    <string name="theme_design">テーマデザイン</string>
+    <string name="light">明るい</string>
+    <string name="dark">暗い</string>
+    <string name="system">システム</string>
+    <string name="same_device_text">デバイスと同じ</string>
 </resources>
