--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -18,4 +18,9 @@
     <string name="no_connection">Нет соединения</string>
     <string name="no_connection_text">Проверьте соединение с сетью и обновите страницу</string>
     <string name="refresh_button">Обновить</string>
+    <string name="theme_design">Тема оформления</string>
+    <string name="light">Светлая</string>
+    <string name="dark">Темная</string>
+    <string name="system">Системная</string>
+    <string name="same_device_text">Такая же, как на устройстве</string>
 </resources>
