--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -26,4 +26,6 @@
     <string name="same_device_text">Такая же, как на устройстве</string>
     <string name="language_text">Язык</string>
     <string name="determine_automatically">Определять автоматически</string>
+    <string name="restart_button">Перезапустить</string>
+    <string name="restart_text">Изменения вступят в силу после перезапуска</string>
 </resources>
